# hdbi-sqlite

./: .gitignore  ChangeLog  README.md  hdbi-sqlite.cabal
Database/HDBI/: SQlite.hs
Database/HDBI/SQlite/: Implementation.hs
testsrc/: runtests.hs
