name:                hdbi-sqlite

version:             1.0.0

-- A short (one-line) description of the package.
synopsis:            SQlite driver for HDBI

-- A longer description of the package.
-- description:         

-- URL for the project homepage or repository.
homepage:            https://github.com/s9gf4ult/hdbi-sqlite

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Aleksey Uymanov

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          Aleksey Uymaonov <s9gf4ult@gmail.com>

-- A copyright notice.
-- copyright:           

category:            Database

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8

source-repository head
  type:     git
  location: https://github.com/s9gf4ult/hdbi-sqlite.git


library
  -- Modules exported by the library.
  exposed-modules:     Database.HDBI.SQlite
                     , Database.HDBI.SQlite.Implementation
  
  -- Modules included in this library but not exported.
  -- other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:       base ==4.5.*
                     , hdbi >= 1.0.0
                     , direct-sqlite
                     , text
                     , blaze-builder
                     , bytestring
